# DjangoSlackProjectClone

./: .gitignore  README.md  pyproject.toml
accounts/: admin.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
myapp/: forms.py  slackapp.py  urls.py  views.py
myapp/tests/: test_models.py
static/js/: jquery.active_pass.js  jquery.active_pass_back.js  jquery.check_form.js
templates/: base.html  creating.html  creating_done.html  creating_failed.html
templates/registration/: password_reset_done.html  password_reset_email.html  password_reset_form.html  signup.html
